samples/_failures_safe/1760960432_03ea0b_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_f767b1af.c: In function ‘main’:
./samples/SAFE/__tmp_f767b1af.c:170:12: error: missing terminating " character
  170 |     printf("Decompressed data
      |            ^~~~~~~~~~~~~~~~~~
./samples/SAFE/__tmp_f767b1af.c:170:5: error: expected expression at end of input
  170 |     printf("Decompressed data
      |     ^~~~~~
./samples/SAFE/__tmp_f767b1af.c:170:5: error: expected declaration or statement at end of input
